Fixed gap in course-intro section

--- a/styles/06-components/courses/courses-header.scss
+++ b/styles/06-components/courses/courses-header.scss
@@ -164,7 +164,7 @@ $selector: ".course-intro-dot";
     }
 
     @include for-desktop-up {
-      gap: 50px;
+      gap: 45px;
     }
 
     @include for-large-desktop-up {
